main clases in style.css moves and font adjusted

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,27 +1,25 @@
-<section>
-    <div class="img-txt">
-        <div class="yellow-paper">
+<section class="display-flex">
+    <div class="img-txt display-flex column">
+        <div class="yellow-paper absolute flex-justyfy-align">
             <img src="assets\about_me_img\location.svg">
-            <p>Based in Graz</p>
+            <p class="white-font font-size-24 weight-400 margin-0">Based in Graz</p>
         </div>
-
-        <div class="blue-paper">
+        <div class="blue-paper absolute flex-justyfy-align margin-0">
             <img src="assets\about_me_img\move.svg">
-            <p>Open to relocate</p>
+            <p class="white-font font-size-24 weight-400">Open to relocate</p>
         </div>
-
-        <div class="orange-paper">
+        <div class="orange-paper absolute flex-justyfy-align">
             <img src="assets/about_me_img/remote.svg">
-            <p>Open to work remote</p>
+            <p class="white-font font-size-24 weight-400 margin-0">Open to work remote</p>
         </div>
     </div>
     <div class="about-me-txt">
-        <p>WHO'S DAVOR?</p> 
+        <p class="black-font font-size-20 weight-500 margin-0">WHO'S DAVOR?</p> 
         <div>
-            <h2>About Me</h2>
+            <h2 class="black-font font-size-64 weight-700 margin-0">About Me</h2>
             <img src="assets\about_me_img\blue_line.svg" class=""> 
         </div>
-        <p>
+        <p class="black-font font-size-20 weight-400">
             Hey, I'm Davor. I've always been into tech and software development because 
             I find it exciting how fast everything is evolving. 
             The possibilities we have today and what's coming in the future really inspire me.
@@ -31,6 +29,6 @@
             Coding keeps me curious and driven. There's always something new to learn,
             a new challenge to figure out, and that's what keeps it fun for me.
         </p>
-        <a>Let's talk</a>
+        <a class="flex-justyfy-align font-size-20 weight-500 pointer">Let's talk</a>
     </div>
 </section>
