--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -1,26 +1,22 @@
-<section>
-    <app-navbar class="navbar-container"></app-navbar>
-    <div class="headline-container">           
-        <div class="text-photo-container">
-            <div>
-                <div>
-                    <p>Hello world</p>
-                    <h1>Frontend</h1>
-                </div>
-            </div>
-            <div>
-                <img class="my-photo" src='assets/headline_img/testphoto.png'>
-            </div>
+<section class="white-font">
+    <app-navbar class="navbar-container absolute flex-justyfy-align"></app-navbar>
+    <div class="headline-container display-flex absolute column">           
+        <div class="display-flex">
+            <div>  
+                <p class="font-size-18 weight-500 flex-justyfy-align white-border">Hello world</p>
+                <h1 class="weight-700 margin-0">Frontend</h1>   
+            </div> 
+            <img class="my-photo" src='assets/headline_img/testphoto.png'>        
         </div>
         <div class="lover-text-container">
-            <h1>DEVELOPER</h1>    
-            <a>Get in Touch</a> 
+            <h1 class="weight-700 margin-0">DEVELOPER</h1>    
+            <a class="font-size-18 weight-500 flex-justyfy-align pointer white-border">Get in Touch</a> 
         </div>
     </div>
-    <div class="link-container">
-        <img src='assets/headline_img/linkedin.svg'>
-        <img src='assets/headline_img/github.svg'>
-        <img src='assets/headline_img/mail.svg'>
+    <div class="link-container display-flex absolute column">
+        <img class="pointer white-border" src='assets/headline_img/linkedin.svg'>
+        <img class="pointer white-border" src='assets/headline_img/github.svg'>
+        <img class="pointer white-border" src='assets/headline_img/mail.svg'>
     </div>       
 </section>
 
