--- a/src/app/projects/lower-part/lower-part.component.html
+++ b/src/app/projects/lower-part/lower-part.component.html
@@ -1,14 +1,17 @@
-<section>
+<section class="display-flex">
     <div class="pollo-container">
-        <img src="assets/project_view_img/lower_part/pollo.svg">
-        <h3>El Pollo Loco</h3>
-        <p>Jump, run and throw game based on object-oriented approach.
+        <img class="pointer" src="assets/project_view_img/lower_part/pollo.svg">
+        <h3 class="font-size-24 weight-700">El Pollo Loco</h3>
+        <p class="font-size-18 weight-400">
+            Jump, run and throw game based on object-oriented approach.
             Help Pepe to find coins and tabasco salsa to fight against the crazy hen.
         </p>
     </div>
     <div class="bubble-containe">
-        <img src="assets/project_view_img/lower_part/dabubble.svg">
-        <h3>DABubble</h3>
-        <p>In progress</p>
+        <img class="pointer" src="assets/project_view_img/lower_part/dabubble.svg">
+        <h3 class="font-size-24 weight-700">DABubble</h3>
+        <p class="font-size-18 weight-400">
+            In progress
+        </p>
     </div>
 </section>
