--- a/src/app/projects/upper-part/upper-part.component.html
+++ b/src/app/projects/upper-part/upper-part.component.html
@@ -1,16 +1,16 @@
-<section>
+<section class="display-flex">
     <div class="text-container">
-        <b>MY CRAFT</b>
+        <b class="font-size-20 weight-500">MY CRAFT</b>
         <div class="text-img">
-            <h2>Projects</h2>
+            <h2 class="font-size-64 weight-700">Projects</h2>
             <img src="assets/project_view_img/upper_part/yellow_line.svg">
         </div>
-        <p>Text</p>
+        <p class="font-size-18 weight-400">Text</p>
     </div>
     <div class="join-container">
-        <img src="assets/project_view_img/upper_part/join.svg">
-        <h3>Join</h3>
-        <p>
+        <img class="pointer" src="assets/project_view_img/upper_part/join_laptop.svg">
+        <h3 class="font-size-24 weight-700">Join</h3>
+        <p class="font-size-18 weight-400">
             Task manager inspired by the Kanban System.
             Create and organize tasks using drag and drop functions,
             assign users and categories. 
