--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<section>
+<nav class="display-flex font-size-18 weight-700">
     <img src="assets\headline_img\navbar_img\logo_dj.png">  
-    <a href="">About me</a>
-    <a href="">Skills</a>
-    <a href="">Projects</a>
-    <a href="">Contact</a>
-    <a href="">EN - DE</a>
-</section>
+    <a class="white-font pointer" href="">About me</a>
+    <a class="white-font pointer" href="">Skills</a>
+    <a class="white-font pointer" href="">Projects</a>
+    <a class="white-font pointer" href="">Contact</a>
+    <a class="white-font pointer" href="">EN - DE</a>
+</nav>
