--- a/src/app/skill-set/skill-set.component.html
+++ b/src/app/skill-set/skill-set.component.html
@@ -1,64 +1,59 @@
-<section>
-<div class="main-container">
-    <div class="text-container">
-        <p>MY STACK</p>
-        <div class="h1-decoration">      
-            <h1>Skill set</h1>
+<section class="white-font">
+<div class="main-container display-flex column">
+    <div class="text-container display-flex column">
+        <p class="font-size-20 weight-500">MY STACK</p>
+        <div class="h1-decoration flex-justyfy-align">      
+            <h1 class="font-size-64 weight-700">Skill set</h1>
         </div>
     </div>
-
-    <div class="second-containe">
-        <div class="img-stack">
-
-            <div class="container-one">
-                <div class="img-txt">
+    <div class="second-containe display-flex">
+        <div class="img-stack display-flex column">
+            <div class="container-one display-flex">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets\skill_set_img\front_end\html.svg">
-                    <p>HTML</p>
+                    <p class="font-size-18 weight-400">HTML</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/css.svg">
-                    <p>CSS</p>
+                    <p class="font-size-18 weight-400">CSS</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/javascript.svg">
-                    <p>JavaScript</p>
+                    <p class="font-size-18 weight-400">JavaScript</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/typescript.svg">
-                    <p>TypeScript</p>
+                    <p class="font-size-18 weight-400">TypeScript</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets\skill_set_img\front_end\angular.svg">
-                    <p>Angular</p>
+                    <p class="font-size-18 weight-400">Angular</p>
                 </div>
             </div>
-
-            <div class="container-two">
-                <div class="img-txt">
+            <div class="container-two display-flex">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/firebase.svg">
-                    <p>Firebase</p>
+                    <p class="font-size-18 weight-400">Firebase</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/git.svg">
-                    <p>Git</p>
+                    <p class="font-size-18 weight-400">Git</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/rest_api.svg">
-                    <p>Rest-Api</p>
+                    <p class="font-size-18 weight-400">Rest-Api</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/scrum.svg">
-                    <p>Scrum</p>
+                    <p class="font-size-18 weight-400">Scrum</p>
                 </div>
-                <div class="img-txt">
+                <div class="img-txt flex-justyfy-align column">
                     <img src="assets/skill_set_img/front_end/materialdesign.svg">
-                    <p class="bigger-width">Material Design</p>
+                    <p class="bigger-width display-flex font-size-18 weight-400">Material Design</p>
                 </div>
             </div>
         </div>
-
-        <img class="peel-off" src="assets/skill_set_img/default.svg">
-
+        <img class="peel-off pointer" src="assets/skill_set_img/default.svg">
     </div>
 </div>
 </section>
