--- a/src/app/thoughts/thoughts.component.html
+++ b/src/app/thoughts/thoughts.component.html
@@ -1,39 +1,41 @@
 <section>
 
-    <div class="container-one">
+    <div class="container-one column">
         <div class="right">
-            <div class="text-img">
+            <div class="text-img display-flex">
                 <img src="assets/thoughts_img/arrow.svg">
-                <p>IN THEIR WORDS:</p>
+                <p class="font-size-20 weight-500">IN THEIR WORDS:</p>
             </div> 
-            <h2>Colleagues' Thoughts</h2>   
+            <div class='display-flex right'>
+                <h2 class="font-size-64 weight-700">Colleagues' Thoughts</h2>
+            </div>    
         </div>
     </div>
 
-    <div class="center-container">
+    <div class="flex-justyfy-align">
 
-        <div class="card-container">
+        <div class="card-container flex-justyfy-align">
             
                 <div class="card-one">
                     
                     <div class="height">
-                        <div class="card-container-center">
-                            <div class="width-height">
+                        <div class="card-container-center display-flex">
+                            <div class="width-height display-flex column">
                                 <div>
-                                    <span>
+                                    <span class="font-size-18 weight-400">
                                         Karl really kept the team together with his great
                                          organization and clear communication.
                                          We wouldn't have got this far without his commitment.
                                     </span>
                                 </div>
-                                <div class="autograph">
+                                <div class="autograph display-flex">
                                     <div>
-                                        <h4>Name Surname</h4>
-                                        <p>Developer</p>
+                                        <h4 class="font-size-20 weight-700">Name Surname</h4>
+                                        <p class="font-size-16 weight-500">Developer</p>
                                     </div>
-                                    <div class="flex">
+                                    <div class="flex display-flex">
                                         <img src="assets/thoughts_img/linkdin_svg.svg">
-                                        <a>Profile</a>
+                                        <a class="font-size-18 weight-500 pointer">Profile</a>
                                     </div>
                                 </div>
                             </div>
@@ -42,27 +44,27 @@
 
                 
             </div>
-            <div class="card-two-container">
+            <div class="card-two-container display-flex absolute">
                 <div class="card-two">
 
                     <div class="height">
-                        <div class="card-container-center">
-                            <div class="width-height">
+                        <div class="card-container-center display-flex">
+                            <div class="width-height display-flex column">
                                 <div>
-                                    <span>
+                                    <span class="font-size-18 weight-400">
                                         Karl really kept the team together with his great
                                          organization and clear communication.
                                          We wouldn't have got this far without his commitment.
                                     </span>
                                 </div>
-                                <div class="autograph">
+                                <div class="autograph display-flex">
                                     <div>
-                                        <h4>Name Surname</h4>
-                                        <p>Developer</p>
+                                        <h4 class="font-size-20 weight-700">Name Surname</h4>
+                                        <p class="font-size-16 weight-500">Developer</p>
                                     </div>
-                                    <div class="flex">
+                                    <div class="flex display-flex">
                                         <img src="assets/thoughts_img/linkdin_svg.svg">
-                                        <a>Profile</a>
+                                        <a class="font-size-18 weight-500 pointer">Profile</a>
                                     </div>
                                 </div>
                             </div>
@@ -71,27 +73,27 @@
 
                 </div>
             </div>
-            <div class="card-three-container">
+            <div class="card-three-container display-flex absolute">
                 <div class="card-three">
 
                     <div class="height">
-                        <div class="card-container-center">
-                            <div class="width-height">
+                        <div class="card-container-center display-flex">
+                            <div class="width-height display-flex column">
                                 <div>
-                                    <span>
+                                    <span class="font-size-18 weight-400">
                                         Karl really kept the team together with his great
                                          organization and clear communication.
                                          We wouldn't have got this far without his commitment.
                                     </span>
                                 </div>
-                                <div class="autograph">
+                                <div class="autograph display-flex">
                                     <div>
-                                        <h4>Name Surname</h4>
-                                        <p>Developer</p>
+                                        <h4 class="font-size-20 weight-700">Name Surname</h4>
+                                        <p class="font-size-16 weight-500">Developer</p>
                                     </div>
-                                    <div class="flex">
+                                    <div class="flex display-flex">
                                         <img src="assets/thoughts_img/linkdin_svg.svg">
-                                        <a>Profile</a>
+                                        <a class="font-size-18 weight-500 pointer">Profile</a>
                                     </div>
                                 </div>
                             </div>
