--- a/src/app/projects/upper-part/upper-part.component.scss
+++ b/src/app/projects/upper-part/upper-part.component.scss
@@ -1,45 +1,29 @@
 section {
     height: 100vh;
-    display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
+    font-family: 'Poppins';
 }
 
 .text-container {
     width: 560px;
     height: 240px;
-    b {
-        font-size: 20px;
-    }
     h2 {
-        font-size: 64px;
         margin: 0px;
-    }
-    p {
-        font-size: 18px;
     }
 }
 
 .text-img {
     width: 260px;
-    height: 84px;
-    img {
-        width: 216px;
-    }
 }
 
 .join-container {
     width: 560px;
     img {
+        width: 560px;
         height: 400px;
-        border-radius: 25px;
-        cursor: pointer;
     } 
     h3 {
-        font-size: 24px;
         margin: 0px;
-    }
-    p {
-        font-size: 18px;
     }
 }
