--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer>
     <img src="assets/headline_img/navbar_img/logo_dj.png">
-    <p>Davor Jezernik 2025</p>
-    <div class="hyperling-container">
-        <a href="">Legal Notice</a>
-        <a href="">GitHub</a>
-        <a href="">LinkedIn</a>
-        <a href="">Email</a>
+    <p class="font-size-18 weight-700">Davor Jezernik 2025</p>
+    <div class="hyperling-container display-flex">
+        <a class="white-font font-size-18 weight-700" href="">Legal Notice</a>
+        <a class="white-font font-size-18 weight-700" href="">GitHub</a>
+        <a class="white-font font-size-18 weight-700" href="">LinkedIn</a>
+        <a class="white-font font-size-18 weight-700" href="">Email</a>
     </div>
 </footer>
