--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,15 +1,12 @@
-section {
-    display: flex;
+nav {
     justify-content: space-evenly;
     align-items: center;
-    padding: 19px 72px 19px 72px;
+    width: 1200px;
+    height: 80px;
     img {
         height: 40px;
     }
     a {
-        font-size: 18px;
-        color: white;
         text-decoration: none;
-        cursor: pointer;
     }
 }
