--- a/src/app/thoughts/thoughts.component.scss
+++ b/src/app/thoughts/thoughts.component.scss
@@ -1,18 +1,11 @@
 section {
     height: 100vh;
-    p {
-        font-size: 20px;
-    }
-    h2 {
-        font-size: 64px;
-        margin: 0px;
-    }
+    font-family: 'Poppins';
 }
 
 .container-one {
     width: 90%;
-    flex-direction: column;
-    height: 120px;
+    height: 208px;
 }
 
 .right {
@@ -21,8 +14,7 @@ section {
 
 .text-img {
     width: 280px;
-    height: 36px;
-    display: flex;
+    height: 40px;
     align-items: center;
     float: right;
     img {
@@ -31,19 +23,10 @@ section {
     }
 }
 
-.center-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .card-container {
     width: 1200px;
     height: 404px;
     margin-top: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .card-one {
@@ -54,9 +37,7 @@ section {
 }
 
 .card-two-container {
-    position: absolute;
     z-index: 1;
-    display: flex;
     left: 120px;
     transform: rotate(-4deg);
     margin-bottom: 96px;
@@ -69,9 +50,7 @@ section {
 }
 
 .card-three-container {
-    position: absolute;
     z-index: -1;
-    display: flex;
     right: 120px;
     transform: rotate(4deg);
     margin-bottom: 96px;
@@ -88,42 +67,32 @@ section {
 }
 
 .card-container-center {
-    display: flex;
     justify-content: center;
     height: 100%;
 }
 
 .width-height {
     width: 90%;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
     margin: 24px 8px 24px 8px;
 }
 
 .autograph {
     height: 47px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
     h4 {
-        font-size: 20px;
         margin: 0px;
     }
     p {
-        font-size: 16px;
         margin: 0px;
     }
 }
 
 .flex {
-    display: flex;
     align-items: center;
     img {
         height: 18px;
         width: 18px;
-    }
-    p {
-        font-size: 18px;
     }
 }
