--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -7,11 +7,13 @@
                 <h1 class="weight-700 margin-0">Frontend</h1>   
             </div> 
             <img class="my-photo" src='assets/headline_img/testphoto.png'>        
+        </div>      
+        <div class="right display-flex">
+            <h1 class="right weight-700 margin-0">DEVELOPER</h1>
         </div>
-        <div class="lover-text-container">
-            <h1 class="weight-700 margin-0">DEVELOPER</h1>    
-            <a class="font-size-18 weight-500 flex-justyfy-align pointer white-border">Get in Touch</a> 
-        </div>
+        <div class="right display-flex">
+            <a class="font-size-18 weight-500 flex-justyfy-align pointer white-border">Get in Touch</a>
+        </div>       
     </div>
     <div class="link-container display-flex absolute column">
         <img class="pointer white-border" src='assets/headline_img/linkedin.svg'>
