--- a/src/app/headline/headline.component.scss
+++ b/src/app/headline/headline.component.scss
@@ -41,8 +41,8 @@ section {
     transform: rotate(8deg);
 }
 
-.lover-text-container {
-    margin-left: 128px;
+.right {
+    justify-content: end;
 }
 
 .link-container {
