--- a/src/app/thoughts/thoughts.component.html
+++ b/src/app/thoughts/thoughts.component.html
@@ -1,16 +1,17 @@
 <section>
 
-    <div class="container-one column">
-        <div class="right">
+    <div class="flex-justyfy-align">
+        <div class="container-one display-flex column">
             <div class="text-img display-flex">
                 <img src="assets/thoughts_img/arrow.svg">
                 <p class="font-size-20 weight-500">IN THEIR WORDS:</p>
             </div> 
-            <div class='display-flex right'>
+            <div class='display-flex'>
                 <h2 class="font-size-64 weight-700">Colleagues' Thoughts</h2>
             </div>    
-        </div>
     </div>
+    </div>
+    
 
     <div class="flex-justyfy-align">
 
