hover efects added not fully done

--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -4,21 +4,43 @@
         <div class="display-flex">
             <div>  
                 <p class="font-size-18 weight-500 flex-justyfy-align white-border">Hello world</p>
-                <h1 class="weight-700 margin-0">Frontend</h1>   
+                <h1 class="weight-700 margin-0">
+                    <span class="hover-lowercase">F</span>
+                    <span class="hover-uppercase">r</span>
+                    <span class="hover-uppercase">o</span>
+                    <span class="hover-uppercase">n</span>
+                    <span class="hover-uppercase">t</span>
+                    <span class="hover-uppercase">e</span>
+                    <span class="hover-uppercase">n</span>
+                    <span class="hover-uppercase">d</span>
+                </h1>   
             </div> 
-            <img class="my-photo" src='assets/headline_img/testphoto.png'>        
+            <div>
+                <img class="my-photo" src='assets/headline_img/testphoto.png'>
+            </div>        
         </div>      
         <div class="right display-flex">
-            <h1 class="right weight-700 margin-0">DEVELOPER</h1>
+            <h1 class="right weight-700 margin-0">
+                <span class="hover-lowercase">D</span>
+                <span class="hover-lowercase">E</span>
+                <span class="hover-lowercase">V</span>
+                <span class="hover-lowercase">E</span>
+                <span class="hover-lowercase">L</span>
+                <span class="hover-lowercase">O</span>
+                <span class="hover-lowercase">P</span>
+                <span class="hover-lowercase">E</span>
+                <span class="hover-lowercase">R</span>
+            </h1>
         </div>
         <div class="right display-flex">
-            <a class="font-size-18 weight-500 flex-justyfy-align pointer white-border">Get in Touch</a>
+            <a class="white-font font-size-18 weight-500 flex-justyfy-align pointer white-border a-hover"
+            href="#contact">Get in Touch</a>
         </div>       
     </div>
     <div class="link-container display-flex absolute column">
-        <img class="pointer white-border" src='assets/headline_img/linkedin.svg'>
-        <img class="pointer white-border" src='assets/headline_img/github.svg'>
-        <img class="pointer white-border" src='assets/headline_img/mail.svg'>
+        <img class="pointer white-border social-link" src='assets/headline_img/linkedin.svg'>
+        <img class="pointer white-border social-link" src='assets/headline_img/github.svg'>
+        <img class="pointer white-border social-link" src='assets/headline_img/mail.svg'>
     </div>       
 </section>
 
