--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,2 +1,38 @@
-<app-upper-part></app-upper-part>
-<app-lower-part></app-lower-part>
+<section class="section-space display-flex">
+    <div class="text-container">
+        <b class="font-size-20 weight-500">MY CRAFT</b>
+        <div class="text-img">
+            <h2 class="font-size-64 weight-700">Projects</h2>
+            <img src="assets/project_view_img/upper_part/yellow_line.svg">
+        </div>
+        <p class="font-size-18 weight-400">Text</p>
+    </div>
+    <div class="join-container">
+        <img class="img-height pointer" src="assets/project_view_img/upper_part/join_laptop.svg">
+        <h3 class="font-size-24 weight-700">Join</h3>
+        <p class="font-size-18 weight-400">
+            Task manager inspired by the Kanban System.
+            Create and organize tasks using drag and drop functions,
+            assign users and categories. 
+        </p>
+    </div>
+</section>
+
+<section class="section-space section-two display-flex">
+    <div class="pollo-container">
+        <img class="img-height pointer" src="assets/project_view_img/lower_part/pollo.svg">
+        <h3 class="font-size-24 weight-700">El Pollo Loco</h3>
+        <p class="font-size-18 weight-400">
+            Jump, run and throw game based on object-oriented approach.
+            Help Pepe to find coins and tabasco salsa to fight against the crazy hen.
+        </p>
+    </div>
+    <div class="bubble-containe">
+        <img class="img-height pointer" src="assets/project_view_img/lower_part/dabubble.svg">
+        <h3 class="font-size-24 weight-700">DABubble</h3>
+        <p class="font-size-18 weight-400">
+            In progress
+        </p>
+    </div>
+</section>
+
