--- a/src/app/headline/headline.component.scss
+++ b/src/app/headline/headline.component.scss
@@ -15,7 +15,8 @@ section {
         font-size: 128px;
     }
     a {
-        border-width: 1px 3px 3px 1px;
+        text-decoration: none;
+        border-width: 1px 4px 4px 1px;
         width: 128px;
         padding: 8px;
         border-radius: 32px;
@@ -33,6 +34,28 @@ section {
     transform: translate(-50%, -50%);
 }
 
+.hover-lowercase {
+    text-transform: uppercase;
+    color: rgb(248, 249, 250);
+    transition: color 0.4s ease, transform 0.3s ease;
+}
+  
+.hover-lowercase:hover {
+    text-transform: lowercase;
+    color: rgb(247, 197, 24);
+}
+
+.hover-uppercase {
+    text-transform: lowercase;
+    color: rgb(248, 249, 250);
+    transition: color 0.4s ease, transform 0.3s ease;
+}
+
+.hover-uppercase:hover {
+    text-transform: uppercase;
+    color: rgb(247, 197, 24);
+}
+
 .my-photo {
     height: 244px;
     width: 200px;
@@ -45,6 +68,12 @@ section {
     justify-content: end;
 }
 
+.a-hover:hover {
+    border-width: 1px;
+    background-color: rgb(248, 122, 85);
+    transition: border-width 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
+}
+
 .link-container {
     width: 36px;
     margin-left: 72px;
@@ -55,6 +84,23 @@ section {
         padding: 4px;
     }
 }
+  
+.social-link:hover {
+    background-position: top;
+    background: linear-gradient(to top, rgb(51, 85, 255) 50%, transparent 50%);
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;   
+    background-size: 100% 200%;
+    background-position: bottom;
+    transition: background-position 0.4s ease-out;
+  }
+  
+  
+  
+  
+
+
 
 
 
