--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 /* You can add global styles to this file, and also import other style files */
 /* poppins-100 - latin */
 @font-face {
